--- a/MyCProgram/HTML/JQuery/jijing/base.css
+++ b/MyCProgram/HTML/JQuery/jijing/base.css
@@ -1,3 +1,6 @@
+
+a{ text-decoration:none;}
+a:hover{ text-decoration:underline;}
 body {
     font-family: Helvetica Neue, Arial, sans-serif;
     font-size: 14px;
